--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "fullpage.js": "^2.7.6",
     "jquery": "^2.2.0",
     "nodemon": "^1.8.1",
+    "semantic-ui": "^2.1.8",
     "sidr": "^2.0.0"
   }
 }
