--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-    "name": "Ivory Hacks",
+    "name": "IvoryHacks",
     "version": "1.0.0",
     "description": "High Society Coding",
     "main": "index.js",
     "scripts": {
+        "start": "nodemon server.js",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "repository": {
