Added pages for Sponsors and FAQs. I'm also experimenting with a different style to underline headers.

--- a/package.json
+++ b/package.json
@@ -1,28 +1,58 @@
 {
-    "name": "IvoryHacks",
-    "version": "1.0.0",
-    "description": "High Society Coding",
-    "main": "index.js",
-    "scripts": {
-        "start": "nodemon server.js",
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+ssh://git@github.com:Doolan/IvoryHacks.git"
-    },
-    "author": "Doolan, Melissa",
-    "license": "ISC",
-    "homepage": "https://github.com/Doolan/IvoryHacks",
-    "dependencies": {
-        "angular": "^1.4.8",
-        "angular-route": "^1.4.8",
-        "bootstrap": "^3.3.6",
-        "express": "^4.13.3",
-        "fullpage.js": "^2.7.6",
-        "jquery": "^2.2.0",
-        "nodemon": "^1.8.1",
-        "semantic-ui": "^2.1.8",
-        "sidr": "^2.0.0"
-    }
+  "name": "IvoryHacks",
+  "version": "1.0.0",
+  "description": "High Society Coding",
+  "main": "index.js",
+  "scripts": {
+    "start": "nodemon server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+ssh://git@github.com:Doolan/IvoryHacks.git"
+  },
+  "author": "Doolan, Melissa",
+  "license": "ISC",
+  "homepage": "https://github.com/Doolan/IvoryHacks",
+  "dependencies": {
+    "angular": "^1.4.8",
+    "angular-route": "^1.4.8",
+    "better-console": "^0.2.4",
+    "bootstrap": "^3.3.6",
+    "del": "^2.2.0",
+    "express": "^4.13.3",
+    "extend": "^3.0.0",
+    "fullpage.js": "^2.7.6",
+    "gulp": "^3.9.0",
+    "gulp-autoprefixer": "^3.1.0",
+    "gulp-chmod": "^1.3.0",
+    "gulp-clone": "^1.0.0",
+    "gulp-concat": "^2.6.0",
+    "gulp-concat-css": "^2.2.0",
+    "gulp-copy": "0.0.2",
+    "gulp-dedupe": "0.0.2",
+    "gulp-flatten": "^0.2.0",
+    "gulp-header": "^1.7.1",
+    "gulp-help": "^1.6.1",
+    "gulp-if": "^2.0.0",
+    "gulp-less": "^3.0.5",
+    "gulp-minify-css": "^1.2.3",
+    "gulp-notify": "^2.2.0",
+    "gulp-plumber": "^1.0.1",
+    "gulp-print": "^2.0.1",
+    "gulp-rename": "^1.2.2",
+    "gulp-replace": "^0.5.4",
+    "gulp-rtlcss": "^0.1.4",
+    "gulp-uglify": "^1.5.1",
+    "gulp-util": "^3.0.7",
+    "gulp-watch": "^4.3.5",
+    "jquery": "^2.2.0",
+    "map-stream": "0.0.6",
+    "nodemon": "^1.8.1",
+    "require-dot-file": "^0.4.0",
+    "run-sequence": "^1.1.5",
+    "semantic-ui": "^2.1.8",
+    "sidr": "^2.0.0",
+    "yamljs": "^0.2.4"
+  }
 }
